# Reflection-Tests

./: .gitignore  Reflection.sln  ReflectionTest.sln
Reflection/: Algorithm.hpp  Any.hpp  Attribute.cpp  Attribute.hpp  CacheOrderedMultiMap.hpp  CacheOrderedSet.hpp  ConstexprString.hpp  Field.hpp  Function.cpp  Function.hpp  Iterator.hpp  Meta.hpp  OrderedMap.hpp  OrderedMultiMap.hpp  Property.hpp  Range.hpp  Reflection.hpp  Reflection.vcxproj  Reflection.vcxproj.filters  Type.cpp  Type.hpp  TypeTraits.hpp  Types.hpp  Utilities.hpp  main.cpp  warnings.txt
Reflection/String/: String.cpp
ReflectionTest/: ConstexprString.hpp  Reflection.hpp  ReflectionTest.vcxproj  ReflectionTest.vcxproj.filters  Source.cpp
cmaketest/: CMakeLists.txt
cmaketest/CMake/: AddFile.cmake  FindDependency.cmake  ListChildren.cmake  Moc.cmake  Precompiled.cmake  SourceGroupSetup.cmake
cmaketest/CMake/modules/: FindFMODStudio.cmake  FindSDL2.cmake  FindSDL2_Image.cmake
cmaketest/Main/: CMakeLists.txt  main.cpp
cmaketest/Reflection/: CMakeLists.txt
cmaketest/Reflection/Meta/: Attribute.cpp  Attribute.hpp  CMakeLists.txt  Field.hpp  ForwardDeclarations.hpp  Function.hpp  Property.hpp  Reflection.hpp  Type.cpp  Type.hpp
cmaketest/Reflection/StandardLibrary/: Any.hpp  CMakeLists.txt  ConstexprString.hpp  OrderedMultiMap.hpp  Range.hpp  TypeTraits.hpp  Utilities.hpp
